--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,8 @@
     "react-native": "0.71.7",
     "react-native-fs": "^2.20.0",
     "react-native-web": "~0.18.10",
-    "react-native-zip-archive": "^6.0.9"
+    "react-native-zip-archive": "^6.0.9",
+    "socket.io-client": "^4.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
