--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -18,16 +18,16 @@ RUN npm i --unsafe-perm --allow-root -g npm@latest expo-cli@latest
 
 # install dependencies first, in a different location for easier app bind mounting for local development
 # due to default /opt permissions we have to create the dir with root and change perms
-RUN mkdir /opt/react_native_app
-WORKDIR /opt/react_native_app
-ENV PATH /opt/react_native_app/.bin:$PATH
-COPY ./react_native_app/package.json ./react_native_app/package-lock.json ./
+RUN mkdir /opt/the_void
+WORKDIR /opt/the_void
+ENV PATH /opt/the_void/.bin:$PATH
+COPY ./package.json ./package-lock.json ./
 RUN npm install
 
 # copy in our source code last, as it changes the most
-WORKDIR /opt/react_native_app/app
+WORKDIR /opt/the_void/app
 # for development, we bind mount volumes; comment out for production
-COPY ./react_native_app .
+COPY . .
 
 ENTRYPOINT ["npm", "run"]
 CMD ["web"]
