--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,8 +3,8 @@
 FROM python:3.11-alpine
 
 # Copy local code to the container image.
-COPY . /app/
-WORKDIR /app/
+COPY . /backend
+WORKDIR /backend
 
 # Install production dependencies.
 RUN pip install -r requirements.txt
@@ -15,4 +15,4 @@ EXPOSE 5000
 # webserver, with one worker process and 8 threads.
 # For environments with multiple CPU cores, increase the number of workers
 # to be equal to the cores available.
-CMD ["gunicorn", "--worker-class", "eventlet", "-w", "1", "app:app"]
+CMD ["gunicorn", "-k", "gevent", "-w", "1", "-b", ":5000", "app:app"]
