--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     volumes:
       - ./frontend:/opt/the_void
     ports: 
-      - '19006:19006'
+      - 80:19006
 
   backend:
     build: ./backend
@@ -14,6 +14,6 @@ services:
       - FLASK_ENV=development
       - FLASK_APP=app.py
     volumes:
-      - ./backend:/backend
-    ports: 
-      - '5000:5000'
+      - ./backend:/usr/src/app
+    ports:
+      - 5000:5000
