--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,6 +1,6 @@
 # Use the official Python image.
 # https://hub.docker.com/_/python
-FROM python:3.9-alpine
+FROM python:3.9
 
 RUN mkdir -p /usr/src/app
 WORKDIR /usr/src/app
@@ -14,4 +14,4 @@ EXPOSE 5000
 # webserver, with one worker process and 8 threads.
 # For environments with multiple CPU cores, increase the number of workers
 # to be equal to the cores available.
-CMD ["gunicorn", "-k", "eventlet", "-w", "1", "-b", ":5000", "app:app"]
+CMD ["gunicorn", "-k", "eventlet", "--workers=1", "--bind=0.0.0.0:5000", "app:app"]
