--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo/webpack-config": "^18.0.1",
     "@shopify/flash-list": "^1.4.0",
+    "cors": "^2.8.5",
     "expo": "~48.0.15",
     "expo-av": "~13.2.1",
     "expo-status-bar": "~1.4.4",
