--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,32 +1,20 @@
-http {
-    server_tokens off;
-    charset utf-8;
-
-    # always redirect to https
-    server {
-        listen 80 default_server;
-
-        server_name _;
-
-        return 301 https://$host$request_uri;
-    }
-
-    server {
-        listen 443 ssl http2;
-        # use the certificates
-        ssl_certificate     /etc/letsencrypt/live/{domain}/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/{domain}/privkey.pem;
-        server_name {domain};
-        root /var/www/html;
-        index index.php index.html index.htm;
-
-
-        location / {
-            proxy_pass http://helloworld:8000/;
-        }
-
-        location ~ /.well-known/acme-challenge/ {
-            root /var/www/certbot;
-        }
-    }
+server { 
+ listen 80;
+ server_name frontend;
+ location / {
+   # This would be the directory where your React app's static files are stored at
+   root /usr/share/nginx/html;
+   try_files $uri /index.html;
+ }
+ 
+ location /socket.io {
+   proxy_set_header X-Real-IP $remote_addr;
+   proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+   proxy_set_header X-NginX-Proxy true;
+   proxy_pass http://backend:8000;
+   proxy_ssl_session_reuse off;
+   proxy_set_header Host $http_host;
+   proxy_cache_bypass $http_upgrade;
+   proxy_redirect off;
+ }
 }
