--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,11 +10,35 @@ services:
       - 8000:8000
 
   frontend:
-    build: ./frontend
+    image: node:20.0-alpine
+    volumes:
+      - ./frontend:/tmp/the-void
     environment:
       - NODE_ENV=production
+    command:
+      - npm 
+      - i 
+      - --unsafe-perm 
+      - --allow-root 
+      - -g npm@latest 
+      - expo-cli@latest
+      - |
+      - npm
+      - install
+      - /tmp/the-void
+      - |
+      
+
+  nginx:
+    container_name: nginx
+    image: nginx
+    restart: unless-stopped
     ports: 
-      - 8080:80
+      - 80:80
+      - 443:443
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./nginx/logs/:/etc/logs/
 
   certbot:
     image: certbot/certbot
