update docker-compose to use .env variables

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,4 +46,4 @@ services:
     volumes: 
       - ./certbot/conf:/etc/letsencrypt
       - ./certbot/www:/var/www/certbot
-    command: certonly --webroot -w /var/www/certbot --force-renewal --email {email} -d into-the-void.app --agree-tos
+    command: certonly --webroot -w /var/www/certbot --force-renewal --email ${EMAIL} -d {$DOMAIN} --agree-tos
