updates to nginx/certbot build

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -14,6 +14,5 @@ ENV PATH /opt/the-void/.bin:$PATH
 
 COPY . .
 RUN npm install
-RUN npx expo export:web
 
-WORKDIR /opt/the-void/web-build
+WORKDIR /opt/the-void
