--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,9 @@ services:
     build: ./frontend
     environment:
       - NODE_ENV=production
+    volumes:
+      - ./frontend/web-build:/opt/the-void/web-build
+    command: npx expo export:web
 
   nginx:
     container_name: nginx
@@ -24,6 +27,7 @@ services:
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
       - ./nginx/logs/:/etc/logs/
+      - ./frontend/web-build:/usr/share/nginx/html
 
   certbot:
     image: certbot/certbot
