--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,14 +5,22 @@ events {
 }
 
 http {
+
+    server_tokens off;
+    charset utf-8;
+
     server { 
-        listen 80;
-            server_name frontend;
-            location / {
+        listen 80 default_server;
+        server_name ${DOMAIN};
+        location / {
             root /usr/share/nginx/html;
             try_files $uri /index.html;
         }
         
+        location ~ /.well-known/acme-challenge/ {
+            root /var/www/certbot;
+        }
+
         location /socket.io {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
