--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,8 +22,8 @@ services:
     image: nginx
     restart: unless-stopped
     environment:
-      - DOMAIN ${DOMAIN}
-      - EMAIL ${EMAIL}
+      - DOMAIN=${DOMAIN}
+      - EMAIL=${EMAIL}
     ports: 
       - 80:80
       - 443:443
