--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -11,7 +11,9 @@ http {
 
     server { 
         listen 80 default_server;
-        server_name ${DOMAIN};
+
+        server_name _;
+        
         location / {
             root /usr/share/nginx/html;
             try_files $uri /index.html;
