--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -13,12 +13,23 @@ http {
         listen 80 default_server;
 
         server_name _;
+
+        return 301 https://$host$request_uri;
+    }
+
+    server {
+        listen 443 ssl http2;
+        ssl_certificate     /etc/letsencrypt/live/${DOMAIN}/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/${DOMAIN}/privkey.pem;
+        server_name ${DOMAIN};
+        root /var/www/html;
+        index index.php index.html index.htm;
         
         location / {
             root /usr/share/nginx/html;
             try_files $uri /index.html;
         }
-        
+
         location ~ /.well-known/acme-challenge/ {
             root /var/www/certbot;
         }
