removed env variables from nginx.conf

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -19,9 +19,9 @@ http {
 
     server {
         listen 443 ssl http2;
-        ssl_certificate     /etc/letsencrypt/live/${DOMAIN}/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/${DOMAIN}/privkey.pem;
-        server_name ${DOMAIN};
+        ssl_certificate     /etc/letsencrypt/live/into-the-void.app/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/into-the-void.app/privkey.pem;
+        server_name into-the-void.app www.into-the-void.app;
         root /var/www/html;
         index index.php index.html index.htm;
         
