--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -22,8 +22,6 @@ http {
         ssl_certificate     /etc/letsencrypt/live/into-the-void.app/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/into-the-void.app/privkey.pem;
         server_name into-the-void.app www.into-the-void.app;
-        root /var/www/html;
-        index index.php index.html index.htm;
         
         location / {
             root /usr/share/nginx/html;
@@ -34,15 +32,16 @@ http {
             root /var/www/certbot;
         }
 
-        location /socket.io {
-            proxy_set_header X-Real-IP $remote_addr;
+        location /socket.io/ {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-NginX-Proxy true;
-            proxy_pass https://localhost:8000$request_uri;
-            proxy_ssl_session_reuse off;
             proxy_set_header Host $http_host;
-            proxy_cache_bypass $http_upgrade;
-            proxy_redirect off;
+
+            proxy_pass https://localhost:8000;
+
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+
         }
     }
 }
