--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,11 @@ services:
       - FLASK_APP=app.py
     volumes:
       - ./backend:/usr/src/app
+      - ./certbot/conf:/etc/letsencrypt
+      - ./certbot/www:/var/www/certbot
     ports:
       - 8000:8000
+    command: gunicorn app:app
 
   frontend:
     container_name: frontend
