--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,24 +11,25 @@
   "dependencies": {
     "@expo/webpack-config": "^18.0.1",
     "@shopify/flash-list": "^1.4.0",
+    "@shopify/react-native-skia": "0.1.172",
     "cors": "^2.8.5",
     "expo": "~48.0.15",
     "expo-av": "~13.2.1",
+    "expo-font": "~11.1.1",
+    "expo-linear-gradient": "~12.1.2",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.8",
     "react-native-fs": "^2.20.0",
+    "react-native-reanimated": "~2.14.4",
     "react-native-web": "~0.18.10",
     "react-native-zip-archive": "^6.0.9",
-    "socket.io-client": "^4.6.1",
-    "expo-font": "~11.1.1",
-    "react-native-reanimated": "~2.14.4",
-    "expo-linear-gradient": "~12.1.2",
-    "@shopify/react-native-skia": "0.1.172"
+    "socket.io-client": "^4.6.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@babel/plugin-transform-export-namespace-from": "^7.22.3"
   },
   "private": true
 }
