--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,20 +17,22 @@
     "expo-av": "~13.2.1",
     "expo-font": "~11.1.1",
     "expo-linear-gradient": "~12.1.2",
+    "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.8",
     "react-native-fs": "^2.20.0",
     "react-native-reanimated": "~2.14.4",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
     "react-native-web": "~0.18.10",
     "react-native-zip-archive": "^6.0.9",
     "react-particles": "^2.10.1",
     "socket.io-client": "^4.6.1",
     "tsparticles": "^2.10.1",
     "tsparticles-engine": "^2.10.1",
-    "tsparticles-preset-stars": "^2.10.1",
-    "expo-splash-screen": "~0.18.2"
+    "tsparticles-preset-stars": "^2.10.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
